src/test/deca/syntax/invalid/our_synt_tests/robin-test4-invaChain.deca
// Error: error while parsing \" due to \\\ which is
// 		an invalid string.

{
boolean a = true;
boolean b = false;
if (a!=b) {
println("true<false\\\"); 
}
}
